Revision history for Perl extension XML::LibXSLT.

1.62pre
     - security callback interface contributed by Shane Corgatelli

1.61
     - fixed error reporting: die on fatal errors, warn otherwise
       (in particular, warn rather than die on <xsl:message terminate="no">)

1.60
     - fix a huge memory leak in transform_file (bug #1314)
     - make it clear from the docs that output_string returns bytes (bug #8875)
     - added missing type-casting to fix compile-time warnings (bug #18508)
     - using call_* instead of perl_call_* (perl_ variants are obsolete)
     - in callbacks, POPs on error before croaking, otherwise it has no
       effect (and we probably leak)
     - added test case which used to fail (provided in rt #15723)
     - apply patch for Makefile.PL for non-standard libxslt paths (bug #16224)
     - fix segfault with registered functions returning nodes
     - fix leaks in parse_stylesheet
     - error reporting

1.59
    - (revision bumped to match XML::LibXML)
    - adapted for new XML::LibXML::InputCallback API
    - support for static linking against libxml2

1.57
    - (revision bumped to match XML::LibXML)
    - Some minor fixes to perl extension functions support
    - Fixed callbacks support
    - Enable xinclude in XSLT files
    - Fixed some memory leaks
    - Fixed some segfaults

1.53
    - Fixed ordering of params to perl extension funcs
    - Implemented nodelist and other data type passing to
      extension functions, and returning nodelist and elements
      (some code from Ido Ben-Zvi)
    - Slightly better error handling

1.52
    - Perl extension functions (whee!)

1.51
    - Mac OS X fixes
    - Cleaned up XPath quoting
    - Fixed document('') test (though if it still doesn't work
      in your code, see t/07blankdoc.t for details about how to
      make it work).

1.50
    - Cleaned up media_type method so it doesn't segfault.

1.49
    - Migrated to new XML::LibXML 1.49 (with new memory stuff)

1.31